# paas

./: Cargo.toml  DESIGN.md  README.md  shell.nix
data/: client1.csr  client1.key  client1.pem  client2.csr  client2.key  client2.pem  client_ca.key  client_ca.pem  client_ca.srl  generate_certs.sh  server.csr  server.key  server.pem  server_ca.key  server_ca.pem  server_ca.srl  untrusted_ca.key  untrusted_ca.pem  untrusted_ca.srl  untrusted_client.csr  untrusted_client.key  untrusted_client.pem
paas-types/: Cargo.toml  build.rs
paas-types/proto/: paas.proto
paas-types/src/: lib.rs
paasc/: Cargo.toml
paasc/src/: lib.rs  main.rs  ops.rs
paasd/: Cargo.toml
paasd/src/: lib.rs  main.rs  service.rs  store.rs  user.rs
paasd/tests/: integration.rs
worker/: Cargo.toml
worker/src/: lib.rs  logs.rs  ops.rs
