[package]
name = "paasd"
version = "0.1.0"
authors = ["Justinas Stankevicius <justinas@justinas.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
paas-types = { path = "../paas-types" }
pretty_env_logger = "0.3"
rustls = "0.19"
tonic = { version = "0.4", features = ["tls"] }
tokio = { version = "1.3", features = ["full"] }
