[package]
name = "paasd"
version = "0.1.0"
authors = ["Justinas Stankevicius <justinas@justinas.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
futures = "0.3"
log = "0.4"
paas-types = { path = "../paas-types" }
pretty_env_logger = "0.3"
rustls = "0.19"
thiserror = "1"
tonic = { version = "0.4", features = ["tls"] }
tokio = { version = "1.3", features = ["full"] }
uuid = { version = "0.8", features = ["v4"] }
x509-parser = "0.9"
worker = { path = "../worker" }

[dev-dependencies]
paasc = { path = "../paasc" }
