[package]
name = "worker"
version = "0.1.0"
authors = ["Justinas Stankevicius <justinas@justinas.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3"
bytes = "1.0"
futures = "0.3"
tokio = { version = "1.3", features = ["io-util", "macros", "process", "rt", "sync"] }
